# SaaS-IA

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROMPT-skill-seekers-catalogue-integration.md  PROMPT-skill-seekers-module.md  QUICKSTART.md  README.md  REFONTE_AUTH_COMPLETE.md  SaaS AI Platform – Complete Module Analysis & Optimization Guide.md  SaaS AI Platform – Refonte Design Helper.md  SaaS-IA._CooS-workspace.code-workspace  SaaS-IA.code-workspace
docs/: API.md  (+2 more)
mvp/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATIONS_GUIDE.md  README.md  alembic.ini  demo_hn_results.json  docker-compose.yml  pyproject.toml  requirements.txt
mvp/backend/alembic/: README  env.py
mvp/backend/alembic/versions/: 010_add_social_integration_chatbot_marketplace.py  011_add_presentations_sandbox_forms.py  012_add_scrape_jobs.py  013_add_tenants_and_rls.py  014_add_pdf_documents.py  015_consolidate_missing_tables.py  20260322_0001_sprint3_billing_tables.py  20260322_0002_sprint4_compare_tables.py  20260322_0003_sprint4_pipeline_tables.py  20260322_0004_sprint5_knowledge_tables.py  20260322_0005_sprint5_api_keys_table.py  20260322_0006_add_stripe_fields.py  20260322_0007_collab_workspace_tables.py  20260323_0001_initial_consolidated.py  20260323_0002_content_studio_and_workflows.py  20260323_0003_p1_modules.py  20260323_0004_p2_modules.py  20260323_0005_fine_tuning.py  20260323_0006_pgvector_embeddings.py  20260323_0008_agent_tables.py  20260323_0009_add_speaker_diarization.py  20260323_0010_cost_tracking_table.py  20260323_0011_add_sentiment_to_transcriptions.py  20260324_0007_monitoring_search_memory.py  20260325_0008_skill_seekers.py  20260325_0009_notifications.py  20260325_0010_audio_studio.py  20260325_0010_repo_analyzer.py  20260326_0011_audit_log.py  20260326_0011_outbox_events.py  20260326_0011_secrets_manager.py  20260326_0012_composite_indexes.py  20260326_0016_unique_constraints.py  20260326_0017_cascade_delete_fks.py  20260327_0018_email_verified_field.py  20260410_0019_add_instagram_reels_table.py  20260412_0020_add_manager_role.py
mvp/backend/app/: __init__.py  auth.py  cache.py  celery_app.py  config.py  database.py  email_service.py  main.py  metrics.py  rate_limit.py  rate_limit_dynamic.py
mvp/backend/app/ai_assistant/: __init__.py  litellm_proxy.py  models.py  retry.py  routes.py  schemas.py  service.py
mvp/backend/app/ai_assistant/classification/: README.md  __init__.py  config_loader.py  content_classifier.py  enums.py  metrics.py  model_selector.py  prompt_selector.py
mvp/backend/app/ai_assistant/providers/: __init__.py  base.py  claude.py  gemini.py  groq.py
mvp/backend/app/api/: __init__.py  docs.py  health.py  websocket_routes.py
mvp/backend/app/core/: audit_log.py  circuit_breaker.py  error_tracking.py  feature_flags.py  lifecycle.py  logging_config.py  multi_tenant.py  notifications.py  outbox.py  secrets_manager.py  telemetry.py  telemetry_structlog.py  token_blacklist.py  websocket_manager.py
mvp/backend/app/middleware/: __init__.py  audit_middleware.py  compression.py  feature_flag_middleware.py  logging_middleware.py  plan_resolver.py  rate_limiter.py  request_id.py  request_id_celery.py  request_id_structlog.py  security_headers.py  sentry_context.py  shutdown_guard.py  tenant_middleware.py
mvp/backend/app/models/: agent.py  api_key.py  billing.py  compare.py  knowledge.py  pipeline.py  transcription.py  user.py  workspace.py
mvp/backend/app/modules/: __init__.py
mvp/backend/app/modules/agents/: executor.py  graph_engine.py  manifest.json  planner.py  routes.py  schemas.py  service.py
mvp/backend/app/modules/ai_chatbot_builder/: manifest.json  routes.py  schemas.py  service.py
mvp/backend/app/modules/ai_forms/: manifest.json  routes.py  schemas.py  service.py
mvp/backend/app/modules/ai_memory/: manifest.json  routes.py  schemas.py  service.py
mvp/backend/app/modules/ai_monitoring/: manifest.json  routes.py  schemas.py  service.py
mvp/backend/app/schemas/: __init__.py  conversation.py  transcription.py  user.py
mvp/backend/app/tasks/: outbox_worker.py  secrets_checker.py
mvp/backend/app/transcription/: __init__.py  assemblyai_service.py  audio_cache.py  debug_logger.py  language_detector.py  livestream_service.py  video_tools.py  whisper_service.py  youtube_service.py  youtube_transcript.py
mvp/backend/app/utils/: __init__.py  sanitize.py
mvp/backend/scripts/: db-migrate.bat  db-migrate.sh  generate_project_map.py  seed_data.py
mvp/backend/tests/: conftest.py  demo_ai_router.py  test_agents_service.py  test_ai_providers.py  test_ai_router.py  test_api_keys_service.py  test_auth.py  test_auth_flow.py  test_auth_new_endpoints.py  test_billing.py  test_billing_service.py  test_chatbot_builder.py  test_classification.py  test_compare_service.py  test_content_studio.py  test_conversation_service.py  test_core_services.py  test_email_guard.py  test_health.py  test_instagram_intelligence.py  test_integration.py  test_knowledge_service.py  test_marketplace_service.py  test_middleware.py  test_modules_discovery.py  test_orchestrator_crawl_v7.py  test_pipelines_service.py  test_planner_heuristics.py  test_presidio_service.py  test_repo_analyzer_service.py  test_router_integration.py  test_schemas.py  test_security_fixes.py  test_security_guardian.py  test_skill_seekers.py  test_social_publisher.py  test_sprint4.py  test_sprint5.py  test_token_blacklist.py  test_transcription_complete.py  (+4 more)
mvp/backend/tests/integration/: README.md  __init__.py  conftest.py  test_auth_endpoints_integration.py  test_database.py  test_full_lifecycle.py  test_modules_loading.py  test_redis.py  test_websocket.py  test_youtube_module_integration.py
mvp/sdk/python/: README.md  pyproject.toml
mvp/sdk/python/saas_ia/: __init__.py  client.py  exceptions.py
startup_docs/Analyse du projet Lab-SaaS - Manus/: Analyse Complète du Projet LabSaaS.md  CHANGELOG.md  PROJECT-ARCHITECTURE.md  README.md  ROADMAP.md  config.py  docker-compose.yml  main.py  package.json  pyproject.toml
(+808 files in other folders)
