[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saas-ia-client"
version = "1.0.0"
description = "Official SaaS-IA Python SDK"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]
keywords = ["saas-ia", "ai", "sdk", "transcription", "llm"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["saas_ia*"]
